--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 MONGODB_URI ="mongodb+srv://roja:Roja512@cluster0.xrlkm3e.mongodb.net"
-CLERK_WEBHOOK_SECRET = ""
+CLERK_WEBHOOK_SECRET = "whsec_UO5x5yMTEbr/mte/plVacErhGM++mFrp"
