--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,14 @@
+JWT_SECRET="dev#secret"
+
+#MongoDb setup
 MONGODB_URI ="mongodb+srv://roja:Roja512@cluster0.xrlkm3e.mongodb.net"
+
+# Cloudinary SetUp
+CLOUDINARY_NAME="dxhvr4rwz"
+CLOUDINARY_API_KEY="548643697541433"
+CLOUDINARY_SECRET_KEY="f4PVnsxUJrQZ6rd5V4eGeCYrLOI"
+
+# Clerk Setup
 CLERK_WEBHOOK_SECRET = "whsec_UO5x5yMTEbr/mte/plVacErhGM++mFrp"
+CLERK_PUBLISHABLE_KEY=pk_test_aG9wZWZ1bC1sZW9wYXJkLTgzLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_e7MBACPKgEIouDPfXfOgoxfkPogKE0wVxyNahLijGY
